# bank_marketing

./: .gitignore  Dockerfile.client  Dockerfile.server  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: cicd.yml
before_everything_there_were_notebooks/: .gitignore  01_DataExtraction.ipynb  02_EDA_tm.ipynb  03_BestModelTrainEval.ipynb  04_DoPredictionForBoss.ipynb  README.md
client_app/: app.py
client_app/.streamlit/: config.toml
client_app/styles/: main.css
manifests/base/: backend.pod.yaml  backend.service.yaml  frontend.pod.yaml  frontend.service.yaml
manifests/cloud/: backend.deployment.yaml  frontend.deployment.yaml  gcs-pv.yaml
manifests/local/: backend.deployment.yaml  frontend.deployment.yaml  frontend.volume.yaml  ingress.yaml  models.volume.yaml
models/rf_with_minibatch_kmeans/: feature_eng_pipeline.joblib
notebooks/: EDA.ipynb  Modeling.ipynb
requirements/: all.requirements.txt  client.requirements.txt  data-science.requirements.txt  local.in  local.txt  server.requirements.txt  style.requirements.txt  testing.requirements.txt
server_app/: Makefile  app.py
src/bank_marketing/data/: make_datasets.py  prep_datasets.py
src/bank_marketing/features/: skl_build_features.py
src/bank_marketing/models/: skl_train_models.py
src/bank_marketing/sqlite_db/: bank_marketing_dal.py  generics.py
src/bank_marketing/visualization/: dataframe_explore.py
tests/: how-to.md
tests/test_data/: conftest.py  test_prep_datasets.py
