# This will eventually go into pyproject.toml
[options]
package_dir =
    = src
install_requires =
    pandas
    numpy
    # Note that we NEED to use the same version of scikit-learn than we used to train
    scikit-learn==1.2.*
    prettytable
    scikit-learn-intelex
    pytest
    python-dotenv

[options.extras_require]
server =
    Flask
    flask_restful
    gunicorn

client =
    streamlit

data-science =
    jupyter
    matplotlib
    seaborn
    prettytable
    scikit-learn-intelex

style =
    ruff
    black

all =
    %(server)s
    %(client)s
    %(data-science)s
    %(style)s
